[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/pt-sans.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GameLogic.gd" type="Script" id=2]
[ext_resource path="res://SoundEffects/select.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 1 )

[node name="GuessGenre" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.243137, 0.231373, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -459.5
margin_top = -194.5
margin_right = 459.5
margin_bottom = 194.5
__meta__ = {
"_edit_lock_": true
}

[node name="QuestionLabel" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -315.0
custom_fonts/normal_font = SubResource( 1 )
text = "Какъв е жанрът на произведението \"ИМЕНАПРОИЗВЕДЕНИЕТО\"?"

[node name="isAnswerCorrectLabel" type="RichTextLabel" parent="Control"]
visible = false
anchor_left = 0.507
anchor_top = 0.226
anchor_right = 0.507
anchor_bottom = 0.226
margin_left = -134.933
margin_top = -25.914
margin_right = 135.067
margin_bottom = 26.086
custom_fonts/normal_font = SubResource( 1 )
text = "Правилен отговор!"

[node name="Control2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0
__meta__ = {
"_edit_lock_": true
}

[node name="GenreList" type="ItemList" parent="Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -351.0
margin_right = 159.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 2 )
max_text_lines = 3
max_columns = 2
same_column_width = true

[node name="ChooseButton" type="Button" parent="Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -71.0
margin_right = 124.5
custom_fonts/font = SubResource( 3 )
text = "Избери"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.159

[connection signal="item_selected" from="Control2/GenreList" to="." method="_on_GenreList_item_selected"]
[connection signal="button_down" from="Control2/ChooseButton" to="." method="_on_ChooseButton_button_down"]
